# WorkCode

./: README.md
FreeWay/: CMakeLists.txt
FreeWay/cmake/: third_libs.cmake
FreeWay/conf/: vehicle_param.pb.txt
FreeWay/cyber/: CMakeLists.txt  binary.h
FreeWay/cyber/base/: macros.h
FreeWay/cyber/common/: file.cpp  file.h  log.h  macros.h
FreeWay/dependent/: dependent.cmake
FreeWay/docs/: LatticePlanner.drawio
FreeWay/modules/canbus/proto/: chassis.proto
FreeWay/modules/common/: common_gflags.cpp  common_gflags.h
FreeWay/modules/common/configs/: config_gflags.cpp  config_gflags.h  vehicle_config_helper.cpp  vehicle_config_helper.h
FreeWay/modules/common/data/: vehicle_param.pb.txt
FreeWay/modules/common/math/: aabox2d.cpp  aabox2d.h  angle.cpp  angle.h  box2d.cpp  box2d.h  cartesian_frenet_conversion.cpp  cartesian_frenet_conversion.h  euler_angles_zxy.h  line_segment2d.cpp  line_segment2d.h  linear_interpolation.cpp  linear_interpolation.h  math_utils.cpp  math_utils.h  path_matcher.cpp  path_matcher.h  polygon2d.cpp  polygon2d.h  quaternion.h  sin_table.cpp  sin_table.h  vec2d.cpp  vec2d.h
FreeWay/modules/common/proto/: geometry.proto  header.proto  pnc_point.proto  vehicle_config.proto  vehicle_model_config.proto  vehicle_param.proto  vehicle_state.proto
FreeWay/modules/common/util/: map_util.h  message_util.h  point_factory.h  string_util.cpp  string_util.h  util.h
FreeWay/modules/common/vehicle_model/: vehicle_model.cpp  vehicle_model.h
FreeWay/modules/common/vehicle_param_handle/: vehicle_param_handle.cpp  vehicle_param_handle.h
FreeWay/modules/common/vehicle_state/: vehicle_state_provider.cpp  vehicle_state_provider.h
FreeWay/modules/localization/proto/: localization.proto  pose.proto
FreeWay/modules/map/hdmap/: hdmap.h  hdmap_common.cpp  hdmap_common.h  hdmap_util.h
FreeWay/modules/map/pnc_map/: path.cpp  path.h  pnc_map.cpp  pnc_map.h  route_segments.cpp  route_segments.h
FreeWay/modules/map/proto/: map_geometry.proto  map_id.proto  map_lane.proto
FreeWay/modules/perception/proto/: perception_obstacle.proto
FreeWay/modules/planning/: CMakeLists.txt  main.cpp  planning.cpp  planning.h
FreeWay/modules/planning/common/: ego_info.cpp  ego_info.h  indexed_list.h  local_view.h  planning_gflags.cpp  planning_gflags.h  trajectory_stitcher.cpp  trajectory_stitcher.h
FreeWay/modules/planning/constraint_checker/: collision_checker.cpp  collision_checker.h  constraint_checker.cpp  constraint_checker.h  constraint_checker1d.cpp  constraint_checker1d.h
FreeWay/modules/planning/frame/: frame.cpp  frame.h
FreeWay/modules/planning/obstacle/: obstacle.cpp  obstacle.h
FreeWay/modules/planning/planner/: lattice_planner.cpp  lattice_planner.h
FreeWay/modules/planning/proto/: lattice_structure.proto  planning.proto  sl_boundary.proto
FreeWay/modules/planning/reference_line/: reference_line.cpp  reference_line.h  reference_line_info.cpp  reference_line_info.h  reference_point.cpp  reference_point.h
FreeWay/modules/planning/speed/: st_boundary.cpp  st_boundary.h  st_point.cpp  st_point.h
FreeWay/modules/planning/trajectory/: discretized_trajectory.cpp  discretized_trajectory.h  publishable_trajectory.cpp  publishable_trajectory.h
FreeWay/modules/prediction/proto/: feature.proto  prediction_obstacle.proto
FreeWay/modules/routing/proto/: routing.proto
FreeWay/scripts/: clear.sh  dharma.sh
FreeWay/spider/: CMakeLists.txt  binary.h
FreeWay/spider/base/: macros.h
FreeWay/spider/common/: log.h  macros.h
FreeWay/spider/time/: duration.cpp  duration.h  time.cpp
Parking/: CMakeLists.txt
Parking/components/control/: CMakeLists.txt  control.cpp  control.h  main.cpp
Parking/components/control/MPC/: MPC_Controller (another copy).c  MPC_Controller (another copy).h  MPC_Controller.c  MPC_Controller.h  MPC_light_matrix.c  MPC_light_matrix.h  auxil.c  cs.c  lib_handler.c  memorypool.c  memorypool.h  osqp.c  osqp.h  osqp_configure.h  util.c  util.h
Parking/components/control/common/: gflags_control.cpp  gflags_control.h
Parking/components/control/conf/: adapter.conf  control_config.pb.txt
Parking/components/control/proto/: control_config.pb.cc  control_config.pb.h  control_config.proto
Parking/components/display/: CMakeLists.txt  display.cpp  display.h  main.cpp
Parking/components/display/common/: gflags_display.cpp  gflags_display.h
Parking/components/display/conf/: adapter.conf  adapter_debug.conf  display_config.pb.txt
Parking/components/display/global_path/: global_path.cpp  global_path.h
Parking/components/display/local_view/: local_view.cpp  local_view.h
Parking/components/display/proto/: display_config.pb.cc  display_config.pb.h  display_config.proto
Parking/components/perception/: CMakeLists.txt  main.cpp  perception.cpp  perception.h
Parking/components/perception/common/: gflags_perception.cpp  gflags_perception.h
Parking/components/planning/: CMakeLists.txt  main.cpp  planning.cpp  planning.h
Parking/tools/create_road_map/: CMakeLists.txt  main.cpp
dharma/: CMakeLists.txt
dharma/dependent/: dependent.cmake
dharma/examples/: CMakeLists.txt  listener_lcm.cpp  listener_pb.cpp  listener_pb_thread.cpp  talker_lcm.cpp  talker_pb.cpp
dharma/examples/conf/: common_config.pb.txt  timer_config.pb.txt
dharma/examples/example_component/: example_component.cpp  example_component.h  main.cpp
dharma/examples/example_timer_component/: example_timer_component.cpp  example_timer_component.h  main.cpp
dharma/examples/lcm/: DemoLCM.hpp  DemoLCM.lcm
dharma/examples/proto/: examples.proto
dharma/scripts/: clear.sh
dharma/spider/: CMakeLists.txt  init.cpp  init.h  spider.cpp  spider.h  state.cpp  state.h
dharma/spider/common/: file.cpp  file.h
dharma/spider/component/: component.h  component_base.h  timer_component.h
dharma/spider/node/: node.cpp  node.h  reader.h  reader_base.h  writer.h  writer_base.h
dharma/spider/proto/: component_conf.proto
dharma/spider/spinner/: processor.cpp  processor.h  spinner.cpp  spinner.h
dharma/spider/time/: rate.cpp  rate.h  time.cpp  time.h
(+221 files in other folders)
